added event listener, dynamicly creating buttons bases on past citys, localStorage working

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
         <aside>
             <div class='search'>
                 <h2>Search for a City:</h2>
-                <input type="text" placeholder="Search...." id="search-bar">
-                <button type="button" id="search-btn">Search</button>
+                <form id="search-form">
+                    <input type="text" placeholder="Search...." id="search-bar">
+                    <button type="button" id="search-btn">Search</button>
+                </form>
             </div>
             <div id='last-city'></div>
         </aside>
