--- a/index.html
+++ b/index.html
@@ -1,33 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Dash</title>
-    <link type="stylesheet" src="./assets/styles/style.css">
+    <link rel="stylesheet" href="./assets/styles/reset.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    
+    <link rel="stylesheet" href="./assets/styles/style.css">
 </head>
+
 <body>
+
     <header>
-        <h1>Weather Dashboard</h1>
+        <h3>Weather Dashboard</h3>
     </header>
 
-    <div class="wrapper">
-        <aside>
-            <div class='search'>
-                <h2>Search for a City:</h2>
-                <form id="search-form">
-                    <input type="text" placeholder="Search...." id="search-bar">
-                    <button type="button" id="search-btn">Search</button>
-                </form>
+    <div class="container-fluid">
+
+        <div class="row">
+            <!-- left side/top -->
+            <div class="col s12 m3">
+                <div class='search'>
+                    <h5>Search for a City:</h2>
+                    <form id="search-form">
+                        <input type="text" placeholder="Search...." id="search-bar">
+                        <button type="button" id="search-btn">Search</button>
+                    </form>
+                </div>
+                <div id='last-city'>
+                    <!-- buttons appended here -->
+                </div>
             </div>
-            <div id='last-city'></div>
-        </aside>
-        <main id="weather-detail"></main>
-        <section id="five-day">
-            <h2>5-Day Forecast:</h2>
-        </section>
+
+            <!-- right side -->
+            <div class="col">
+                <!-- top -->
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col cur-weather">
+                            <!-- Location and date appended here -->
+                        </div>
+                    </div>
+                    <!-- bottom -->
+                    <div class="row carousel">
+
+                        <div id="weather0" class="col carousel-item">
+                            <h4 class="city"><span></span></h4>
+                            <h4 class="temp"><span></span>&#8451</h4>
+                            <div class="description"><span></span></div>
+                            <div class="humidity">humidity: <span></span>%</div>
+                            <div class="wind">wind speed: <span></span>km/h</div>
+                        </div>
+                        <div id="weather8" class="col carousel-item">
+                            <h4 class="city"><span></span></h4>
+                            <h4 class="temp"><span></span>&#8451</h4>
+                            <div class="description"><span></span></div>
+                            <div class="humidity">humidity: <span></span>%</div>
+                            <div class="wind">wind speed: <span></span>km/h</div>
+                        </div>
+                        <div id="weather16" class="col carousel-item">
+                            <h4 class="city"><span></span></h4>
+                            <h4 class="temp"><span></span>&#8451</h4>
+                            <div class="description"><span></span></div>
+                            <div class="humidity">humidity: <span></span>%</div>
+                            <div class="wind">wind speed: <span></span>km/h</div>
+                        </div>
+                        <div id="weather24" class="col carousel-item">
+                            <h4 class="city"><span></span></h4>
+                            <h4 class="temp"><span></span>&#8451</h4>
+                            <div class="description"><span></span></div>
+                            <div class="humidity">humidity: <span></span>%</div>
+                            <div class="wind">wind speed: <span></span>km/h</div>
+                        </div>
+                        <div id="weather32" class="col carousel-item">
+                            <h4 class="city"><span></span></h4>
+                            <h4 class="temp"><span></span>&#8451</h4>
+                            <div class="description"><span></span></div>
+                            <div class="humidity">humidity: <span></span>%</div>
+                            <div class="wind">wind speed: <span></span>km/h</div>
+                        </div>
+
+
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+
+
+
+
+
+
+
+
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js"></script>
     <script src="./assets/scripts/script.js"></script>
 </body>
+
 </html>
