5 day weather working

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         <!-- left -->
         <div class="col s12 m4">
             <div class="input-group mb-3">
-                <form  id="search-form">
+                <form id="search-form">
                     <input type="text" placeholder="Search for location" id="search-bar">
                     <button class="btn waves-effect waves-light" type="submit" id="search-btn">Search</button>
                 </form>
             </div>
-            <div id="last-city"></div> 
+            <div id="last-city"></div>
         </div>
         <!-- right -->
         <div class="col">
@@ -48,39 +48,39 @@
             <div class="row">
                 <!-- D1 -->
                 <div class="col" id="weather0">
-                    <h4 class="city"><span></span></h4>
+                    <h5 class="date"><span></span></h5>
                     <h4 class="temp"><span></span>&#8451</h4>
                     <div class="description"><span></span></div>
                     <div class="humidity">humidity: <span></span>%</div>
                     <div class="wind">wind speed: <span></span>km/h</div>
                 </div>
                 <!-- d2 -->
-                <div class="col" id="weather8">
-                    <h4 class="city"><span></span></h4>
+                <div class="col" id="weather1">
+                    <h5 class="date"><span></span></h5>
                     <h4 class="temp"><span></span>&#8451</h4>
                     <div class="description"><span></span></div>
                     <div class="humidity">humidity: <span></span>%</div>
                     <div class="wind">wind speed: <span></span>km/h</div>
                 </div>
                 <!-- d3 -->
-                <div class="col" id="weather16">
-                    <h4 class="city"><span></span></h4>
+                <div class="col" id="weather2">
+                    <h5 class="date"><span></span></h5>
                     <h4 class="temp"><span></span>&#8451</h4>
                     <div class="description"><span></span></div>
                     <div class="humidity">humidity: <span></span>%</div>
                     <div class="wind">wind speed: <span></span>km/h</div>
                 </div>
                 <!-- d4 -->
-                <div class="col" id="weather24">
-                    <h4 class="city"><span></span></h4>
+                <div class="col" id="weather3">
+                    <h5 class="date"><span></span></h5>
                     <h4 class="temp"><span></span>&#8451</h4>
                     <div class="description"><span></span></div>
                     <div class="humidity">humidity: <span></span>%</div>
                     <div class="wind">wind speed: <span></span>km/h</div>
                 </div>
                 <!-- d4 -->
-                <div class="col" id="weather32">
-                    <h4 class="city"><span></span></h4>
+                <div class="col" id="weather4">
+                    <h5 class="date"><span></span></h5>
                     <h4 class="temp"><span></span>&#8451</h4>
                     <div class="description"><span></span></div>
                     <div class="humidity">humidity: <span></span>%</div>
@@ -104,4 +104,3 @@
 </body>
 
 </html>
-
