all working still need to add icons

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
             <div id="last-city"></div>
         </div>
         <!-- right -->
-        <div class="col">
+        <div class="col s12 m8">
             <!-- top -->
-            <div class="row">
+            <div class="row center">
                 <div class="cur-weather"></div>
                 <div id="cur-weather">
                     <!-- <h4 class="city-cur"><span></span></h4> -->
@@ -45,9 +45,9 @@
                 </div>
             </div>
             <!-- bottom -->
-            <div class="row">
+            <div class="row carousel">
                 <!-- D1 -->
-                <div class="col" id="weather0">
+                <div class="col carousel-item" id="weather0">
                     <h5 class="date"><span></span></h5>
                     <h4 class="temp"><span></span>&#8451</h4>
                     <div class="description"><span></span></div>
@@ -55,7 +55,7 @@
                     <div class="wind">wind speed: <span></span>km/h</div>
                 </div>
                 <!-- d2 -->
-                <div class="col" id="weather1">
+                <div class="col carousel-item" id="weather1">
                     <h5 class="date"><span></span></h5>
                     <h4 class="temp"><span></span>&#8451</h4>
                     <div class="description"><span></span></div>
@@ -63,7 +63,7 @@
                     <div class="wind">wind speed: <span></span>km/h</div>
                 </div>
                 <!-- d3 -->
-                <div class="col" id="weather2">
+                <div class="col carousel-item" id="weather2">
                     <h5 class="date"><span></span></h5>
                     <h4 class="temp"><span></span>&#8451</h4>
                     <div class="description"><span></span></div>
@@ -71,7 +71,7 @@
                     <div class="wind">wind speed: <span></span>km/h</div>
                 </div>
                 <!-- d4 -->
-                <div class="col" id="weather3">
+                <div class="col carousel-item" id="weather3">
                     <h5 class="date"><span></span></h5>
                     <h4 class="temp"><span></span>&#8451</h4>
                     <div class="description"><span></span></div>
@@ -79,7 +79,7 @@
                     <div class="wind">wind speed: <span></span>km/h</div>
                 </div>
                 <!-- d4 -->
-                <div class="col" id="weather4">
+                <div class="col carousel-item" id="weather4">
                     <h5 class="date"><span></span></h5>
                     <h4 class="temp"><span></span>&#8451</h4>
                     <div class="description"><span></span></div>
